--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "88078dc4-7edd-4289-a881-c2e408c34ce3",
    "metadata": {},
    "outputs": [
@@ -10,36 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No next button found. Stopping.\n",
-      "Product no:0\n",
-      "found a match: recommended product\n",
       "Click intercepted, attempt 1\n",
-      "No next button found. Stopping.\n",
-      "Product no:1\n",
-      "found a match: recommended product\n",
-      "No next button found. Stopping.\n",
-      "Product no:2\n",
-      "found a match: recommended product\n",
-      "Click intercepted, attempt 1\n",
-      "No next button found. Stopping.\n",
-      "Product no:3\n",
-      "found a match: recommended product\n",
-      "No next button found. Stopping.\n",
-      "Product no:4\n",
-      "found a match: recommended product\n",
-      "Click intercepted, attempt 1\n",
-      "No next button found. Stopping.\n",
-      "Product no:5\n",
-      "found a match: recommended product\n",
-      "No next button found. Stopping.\n",
-      "Product no:6\n",
-      "found a match: recommended product\n",
-      "No next button found. Stopping.\n",
-      "Product no:7\n",
-      "found a match: recommended product\n",
-      "Some error occurred:HTTPConnectionPool(host='localhost', port=53968): Read timed out. (read timeout=120)\n",
-      "Ending the scraping process!\n",
-      "Saving till the last checkpoint!\n"
+      "Click intercepted, attempt 2\n",
+      "Click intercepted, attempt 3\n"
      ]
     }
    ],
@@ -68,7 +41,7 @@
     "driver = webdriver.Chrome(options=options)\n",
     "driver.execute_script(\"Object.defineProperty(navigator, 'webdriver', {get: () => undefined})\")\n",
     "\n",
-    "url = \"https://www.daraz.com.np/products/xbox-360-console-pc-windows-usb-wired-joystick-gamepad-joypad-controller-i111995726-s1030293946.html\"\n",
+    "url = \"https://www.daraz.com.np/products/soft-and-smooth-surface-gel-mouse-pad-i111784-s1037550700.html\"\n",
     "visited_urls.add(url)\n",
     "# Load page twice (key part that works)\n",
     "driver.get(url)\n",
@@ -99,7 +72,7 @@
     "time.sleep(1)\n",
     "total_review.extend(get_review(driver))\n",
     "driver.execute_script(\"window.scrollTo({top: document.body.scrollHeight - 300, behavior: 'smooth'});\")\n",
-    "scrape_iteration = 7\n",
+    "scrape_iteration = 10\n",
     "iteration_count= 0\n",
     "for outter_i in range(scrape_iteration):\n",
     "    try:\n",
@@ -153,7 +126,7 @@
     "                            time.sleep(3)\n",
     "                    if attempt == max_retries:\n",
     "                        print(\"Element not found after several retries.\")\n",
-    "                        sys.exit()\n",
+    "                        raise TimeoutException\n",
     "                    driver.execute_script(\"\"\"window.scrollTo({top: 3300,behavior: 'smooth'});\"\"\")\n",
     "                    total_review.extend(get_review(driver))\n",
     "                    found_match = True\n",
@@ -275,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64d4aa93-95e3-4797-9c84-ed9c738f5cf8",
+   "id": "45ee2952-38ad-4242-a86e-618b0dcb7ed0",
    "metadata": {},
    "outputs": [],
    "source": []
