--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "88078dc4-7edd-4289-a881-c2e408c34ce3",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,38 @@
      "text": [
       "Click intercepted, attempt 1\n",
       "Click intercepted, attempt 2\n",
-      "Click intercepted, attempt 3\n"
+      "Click intercepted, attempt 3\n",
+      "No next button found. Stopping.\n",
+      "Product no:0\n",
+      "found a match: recommended product\n",
+      "Click intercepted, attempt 1\n",
+      "Click intercepted, attempt 2\n",
+      "Click intercepted, attempt 3\n",
+      "Click intercepted, attempt 1\n",
+      "Click intercepted, attempt 2\n",
+      "Click intercepted, attempt 3\n",
+      "Click intercepted, attempt 1\n",
+      "Click intercepted, attempt 2\n",
+      "No next button found. Stopping.\n",
+      "Product no:1\n",
+      "found a match: recommended product\n",
+      "No next button found. Stopping.\n",
+      "Product no:2\n",
+      "found a match: recommended product\n",
+      "No next button found. Stopping.\n",
+      "Product no:3\n",
+      "found a match: recommended product\n",
+      "Click intercepted, attempt 1\n",
+      "No next button found. Stopping.\n",
+      "Product no:4\n",
+      "found a match: recommended product\n",
+      "No next button found. Stopping.\n",
+      "Product no:5\n",
+      "found a match: recommended product\n",
+      "No next button found. Stopping.\n",
+      "Product no:6\n",
+      "found a match: recommended product\n",
+      "No next button found. Stopping.\n"
      ]
     }
    ],
@@ -170,7 +201,7 @@
     "        review = driver.find_elements(By.CSS_SELECTOR, \"div.content\")\n",
     "        for index, review_el in enumerate(review):\n",
     "            is_inside = driver.execute_script(\"\"\"return arguments[1].contains(arguments[0]);\"\"\", review_el ,review_section)\n",
-    "            if is_inside and \"thank you\" not in review_el.text.lower() and re.search(r'[a-z]', review_el.text.lower()) and not re.search(r'\\d\\.\\d/5\\n\\d+ Ratings', review_el.text.lower()):\n",
+    "            if is_inside and \"thank you\" not in review_el.text.lower() and re.search(r'[a-z]', review_el.text.lower()) and not re.search(r'\\d\\.\\d\\s*/\\s*5', review_el.text.lower()):\n",
     "                review_list.append(review_el.text)\n",
     "            \n",
     "    except Exception as e:\n",
@@ -202,7 +233,7 @@
     "            review = driver.find_elements(By.CSS_SELECTOR, \"div.content\")\n",
     "            for index, review_el in enumerate(review):\n",
     "                is_inside = driver.execute_script(\"\"\"return arguments[1].contains(arguments[0]);\"\"\", review_el ,review_section)\n",
-    "                if is_inside and \"thank you\" not in review_el.text.lower() and re.search(r'[a-z]', review_el.text.lower()) and not re.search(r'\\d\\.\\d/5\\n\\d+ Ratings', review_el.text.lower()):\n",
+    "                if is_inside and \"thank you\" not in review_el.text.lower() and re.search(r'[a-z]', review_el.text.lower()) and not re.search(r'\\d\\.\\d\\s*/\\s*5', review_el.text.lower()):\n",
     "                    review_list.append(review_el.text)\n",
     "                \n",
     "        except NoSuchElementException:\n",
