--- a/Scraping.ipynb
+++ b/Scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "88078dc4-7edd-4289-a881-c2e408c34ce3",
    "metadata": {},
    "outputs": [
@@ -13,37 +13,10 @@
       "Click intercepted, attempt 1\n",
       "Click intercepted, attempt 2\n",
       "Click intercepted, attempt 3\n",
-      "No next button found. Stopping.\n",
-      "Product no:0\n",
-      "found a match: recommended product\n",
       "Click intercepted, attempt 1\n",
       "Click intercepted, attempt 2\n",
       "Click intercepted, attempt 3\n",
-      "Click intercepted, attempt 1\n",
-      "Click intercepted, attempt 2\n",
-      "Click intercepted, attempt 3\n",
-      "Click intercepted, attempt 1\n",
-      "Click intercepted, attempt 2\n",
-      "No next button found. Stopping.\n",
-      "Product no:1\n",
-      "found a match: recommended product\n",
-      "No next button found. Stopping.\n",
-      "Product no:2\n",
-      "found a match: recommended product\n",
-      "No next button found. Stopping.\n",
-      "Product no:3\n",
-      "found a match: recommended product\n",
-      "Click intercepted, attempt 1\n",
-      "No next button found. Stopping.\n",
-      "Product no:4\n",
-      "found a match: recommended product\n",
-      "No next button found. Stopping.\n",
-      "Product no:5\n",
-      "found a match: recommended product\n",
-      "No next button found. Stopping.\n",
-      "Product no:6\n",
-      "found a match: recommended product\n",
-      "No next button found. Stopping.\n"
+      "Click intercepted, attempt 1\n"
      ]
     }
    ],
@@ -72,7 +45,7 @@
     "driver = webdriver.Chrome(options=options)\n",
     "driver.execute_script(\"Object.defineProperty(navigator, 'webdriver', {get: () => undefined})\")\n",
     "\n",
-    "url = \"https://www.daraz.com.np/products/soft-and-smooth-surface-gel-mouse-pad-i111784-s1037550700.html\"\n",
+    "url = \"https://www.daraz.com.np/products/black-24-ghz-wireless-mouse-2402mhz-2480mhz-i100914138-s1021450914.html\"\n",
     "visited_urls.add(url)\n",
     "# Load page twice (key part that works)\n",
     "driver.get(url)\n",
@@ -103,17 +76,21 @@
     "time.sleep(1)\n",
     "total_review.extend(get_review(driver))\n",
     "driver.execute_script(\"window.scrollTo({top: document.body.scrollHeight - 300, behavior: 'smooth'});\")\n",
-    "scrape_iteration = 10\n",
+    "scrape_iteration = 20\n",
     "iteration_count= 0\n",
     "for outter_i in range(scrape_iteration):\n",
     "    try:\n",
     "        print(f\"Product no:{iteration_count}\")\n",
     "        iteration_count +=1\n",
-    "        if (iteration_count % 5) == 0:\n",
+    "        if iteration_count%5==0:\n",
+    "            print(\"Saving Progress\")\n",
     "            prev_review = pd.read_csv('scraped_review.csv')\n",
     "            new_reviews_df = pd.DataFrame(total_review, columns=['review'])\n",
     "            combined = pd.concat([prev_review, new_reviews_df], ignore_index=True)\n",
     "            combined.to_csv('scraped_review.csv', index=False)\n",
+    "            visited_urls_df = pd.DataFrame(list(visited_urls), columns=['url'])\n",
+    "            visited_urls_df.to_csv('visited_url.csv', index=False)\n",
+    "            print(f\"Current total reviews: {combined.shape[0]}\")\n",
     "            total_review = []\n",
     "        scroll_count = 0\n",
     "        while True:\n",
@@ -132,7 +109,9 @@
     "\n",
     "            except JavascriptException:\n",
     "                print(\"Reached end of page or script failed.\")\n",
-    "                sys.exit()\n",
+    "                print(\"Going back!\")\n",
+    "                scroll_count=0\n",
+    "                driver.back()\n",
     "        driver.execute_script(\"\"\"arguments[0].scrollIntoView({ behavior: 'smooth', block: 'center' });\"\"\", next_item_mark)\n",
     "        driver.execute_script(\"\"\" window.scrollBy({top: 800,behavior: 'smooth'});\"\"\")\n",
     "        found_match = False\n",
@@ -279,7 +258,148 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "122c877e-2588-497e-bb22-638be0a84e54",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "45ee2952-38ad-4242-a86e-618b0dcb7ed0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prev_review = pd.read_csv('scraped_review.csv')\n",
+    "new_reviews_df = pd.DataFrame(total_review, columns=['review'])\n",
+    "combined = pd.concat([prev_review, new_reviews_df], ignore_index=True)\n",
+    "combined.to_csv('scraped_review.csv', index=False)\n",
+    "visited_urls_df = pd.DataFrame(list(visited_urls), columns=['url'])\n",
+    "visited_urls_df.to_csv('visited_url.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4a4515a3-0d07-4db6-8c9e-c4b784aa72d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Very nice product came in good condition good ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>समान त ठिक condition मा पाइयो।\\nतर यो charge न...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>If you are facing any issue please dm us.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>This AirPod is awesome…🫶🏻sound ni dami cha…I h...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Yo vanda pahile maile JBL WAVE300TWS use garth...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3472</th>\n",
+       "      <td>Good 👍🏻</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3473</th>\n",
+       "      <td>Nice..</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3474</th>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3475</th>\n",
+       "      <td>Good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3476</th>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3477 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 review\n",
+       "0     Very nice product came in good condition good ...\n",
+       "1     समान त ठिक condition मा पाइयो।\\nतर यो charge न...\n",
+       "2            If you are facing any issue please dm us. \n",
+       "3     This AirPod is awesome…🫶🏻sound ni dami cha…I h...\n",
+       "4     Yo vanda pahile maile JBL WAVE300TWS use garth...\n",
+       "...                                                 ...\n",
+       "3472                                           Good 👍🏻 \n",
+       "3473                                            Nice.. \n",
+       "3474                                              good \n",
+       "3475                                              Good \n",
+       "3476                                              good \n",
+       "\n",
+       "[3477 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_reviews_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "05a5d17d-4624-4858-88c5-1193e02bee5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prev_review = pd.read_csv('scraped_review.csv')[['review']]\n",
+    "prev_review.drop_duplicates()\n",
+    "prev_review.to_csv('scraped_review.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad521f04-d61c-40d2-93c4-5d0269dfb73d",
    "metadata": {},
    "outputs": [],
    "source": []
